choose-mirror (0.033) UNRELEASED; urgency=low

  * Joey Hess
    - Fixed two templates from type "test" to "text". Thank you, lintian. 

 -- Joey Hess <joeyh@debian.org>  Sun, 22 Feb 2004 18:53:40 -0500

choose-mirror (0.032) unstable; urgency=low

  * Rebuild posibly fixing #233988.

  * Translations
    - Javier Fernandez-Sanguino: Updated Spanish translation (es.po)
    - Changwoo Ryu             : Updated Korean translation (ko.po)

 -- Joey Hess <joeyh@debian.org>  Sun, 22 Feb 2004 01:27:05 +0100

choose-mirror (0.031) unstable; urgency=low

  * Translations:
    - Miguel Figueiredo	    : Updated Portuguese translation (pt.po)
    - Kenshi Muto           : Updated Japanese translation (ja.po)
    - Claus Hindsgaul       : Updated Danish translation (da.po)
    - Ognyan Kulev          : Updated Bulgarian translation (bg.po)
    - K. Margaritis         : Updated Greek translation (el.po)
    - Peter Mann            : Updated Slovak translation (sk.po)
    - Eugeniy Meshcheryakov : Updated Ukrainian translation (uk.po)
    - Andre Dahlqvist       : Update Swedish translation (sv.po)
    - Dennis Stampfer       : Update German translation (de.po)
    - Jordi Mallach         : Update Catalan translation (ca.po)
    - Carlos Z.F. Liu       : Updated Simplified Chinese translation (zh_CN.po)
    - Kęstutis Biliūnas     : Updated Lithuanian translation (lt.po)
    - Christian Perrier     : Updated French translation (fr.po)
    - Kęstutis Biliūnas     : Updated Lithuanian translation (lt.po)
    - Miroslav Kure         : Updated Czech translation (cs.po)
    - K. Margaritis         : Updated Greek translation (el.po)
    - André Luís Lopes      : Updated Brazilian Portuguese translation (pt_BR.po)

  * Christian Perrier
    - Lowered priority of the country/mirror questions to medium
      (countrychooser value used as default)
    - Rewrote templates-in for DTGS compliance. This is the correct change